--- a/the-police.service
+++ b/the-police.service
@@ -4,6 +4,8 @@ Wants=network-online.target
 After=network-online.target
 
 [Service]
+User=police
+Group=police
 WorkingDirectory=/srv/message-police-bot
 ExecStart=/usr/bin/node index.js
 Restart=always
